# bestls

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  release.yml  version-bump.yml
docs/: CHANGELOG.md  CONTRIBUTING.md  EXAMPLES.md  IMPLEMENTATION_SUMMARY.md  REVIEW_CHECKLIST.md  ROADMAP.md  THEMING.md  TODO.md  VERSION_POLICY.md  WARP.md
pkg/: .SRCINFO  PKGBUILD
src/: cli.rs  color.rs  fsops.rs  main.rs  table.rs
