[package]
name = "bestls"
version = "0.1.0"
edition = "2024"
publish = true

# Authors and contact info
authors = ["Murtaza Nazar <mkm9284@gmail.com>"]
description = "A fast and colorful Rust-based ls replacement CLI tool with JSON output and sorting options."
license = "MIT"
repository = "https://github.com/MurtadaNazar/bestls"
homepage = "https://github.com/MurtadaNazar/bestls"
documentation = "https://docs.rs/bestls"
readme = "README.md"
keywords = ["cli", "ls", "file-listing", "rust", "terminal", "json", "tabled"]
categories = ["command-line-utilities", "filesystem"]

# For publishing on crates.io, make sure to include README.md and LICENSE files

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
owo-colors = "4.2.1"
strum = { version = "0.27", features = ["derive"] }
tabled = "0.20.0"
chrono = "0.4.41"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"                                       # Parallel file metadata fetching to speed up directory reads
bytesize = "1.3.0"                                   # Convert file sizes to human-readable formats like KB, MB

[badges]
travis-ci = { repository = "MurtadaNazar/bestls" }
maintenance = { status = "actively-developed" }
