[package]
name = "bestls"
version = "1.1.0"
edition = "2021"
publish = true

authors = ["Murtaza Nazar <mkm9284@gmail.com>"]
description = "A fast and colorful Rust-based ls replacement CLI tool with JSON output and sorting options."
license = "MIT"
repository = "https://github.com/MurtadaNazar/bestls"
homepage = "https://github.com/MurtadaNazar/bestls"
documentation = "https://docs.rs/bestls"
readme = "README.md"
keywords = ["cli", "ls", "rust", "terminal", "json"]
categories = ["command-line-utilities", "filesystem"]

[features]
# Default feature enables Unix-only code
default = ["unix"]
unix = []

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
owo-colors = "4.2.1"
strum = { version = "0.27", features = ["derive"] }
tabled = "0.20.0"
chrono = "0.4.38"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"
bytesize = "1.3.0"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27.1", features = ["user"] }

[badges]
maintenance = { status = "actively-developed" }
