[package]
name = "bestls"
version = "1.5.0"
edition = "2021"
publish = true

authors = ["Murtaza Nazar <mkm9284@gmail.com>"]
description = "A fast and colorful Rust-based ls replacement CLI tool with JSON output and sorting options."
license = "MIT"
repository = "https://github.com/MurtadaNazar/bestls"
homepage = "https://github.com/MurtadaNazar/bestls"
documentation = "https://docs.rs/bestls"
readme = "README.md"
keywords = ["cli", "ls", "rust", "terminal", "json"]
categories = ["command-line-utilities", "filesystem"]

[features]
# Default feature enables Unix-only code
default = ["unix"]
unix = []

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
clap_complete = "4.5.1"
owo-colors = "4.2.1"
strum = { version = "0.27", features = ["derive"] }
tabled = "0.20.0"
chrono = "0.4.38"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"
bytesize = "1.3.0"
dirs = "5.0.1"                                      # For managing config directories
glob = "0.3"                                        # For glob-style pattern matching
toml = "0.8"                                        # For TOML config file parsing

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27.1", features = ["user"] }

# Optimized release profile for production builds
[profile.release]
opt-level = 3          # Maximum optimization
lto = true             # Link-time optimization for smaller, faster binaries
codegen-units = 1      # Better optimization at cost of compile time
panic = "abort"        # Slightly smaller binaries, no unwinding
strip = true           # Remove symbols for smaller binary size

# Fast debug profile for development
[profile.dev]
opt-level = 0          # No optimization for fast compilation
debug = true           # Include debug info
overflow-checks = true # Safety checks enabled

[badges]
maintenance = { status = "actively-developed" }
